2011-08-25 Riccardo Mottola <rm@gnu.org>

	* GRCircle.m
	Calculate circle bounds correctly.